Fixed navbar brand z-index to be clickable.

--- a/modern-backbone-starterkit/src/styles/nav.styl
+++ b/modern-backbone-starterkit/src/styles/nav.styl
@@ -117,6 +117,8 @@ li.active a.kmw-nav-item-anchor {
 }
 
 .kmw-navbar-brand {
+  z-index: 1;
+  position: relative;
   padding: 0 0 0 0;
   color: white !important;
   display: inline-block;
